--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>MY PAGE WORKS!!</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium commodi incidunt quaerat animi placeat repellendus hic nam autem amet nihil. Temporibus sint quos vero voluptas in maxime necessitatibus nisi.</p>
 </body>
 
 </html>
