--- a/index.html
+++ b/index.html
@@ -1,16 +1,75 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>New page test</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+
+  <link rel="stylesheet" href="/css/styles.css">
+
+  <title>Front End Dev | Gabriel Canderoli</title>
 </head>
 
 <body>
-    <h1>MY PAGE WORKS!!</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium commodi incidunt quaerat animi placeat repellendus hic nam autem amet nihil. Temporibus sint quos vero voluptas in maxime necessitatibus nisi.</p>
+
+  <header>
+    <div class="container">
+      <h1 data-aos="fade-down">Hi! I'm Gabriel Canderoli</h1>
+      <h3 data-aos="fade-down">Front End Developer</h3>
+    </div>
+  </header>
+
+  <article id="about">
+    <h2>About Me</h2>
+
+    <p>I started working in web development 5 years ago, doing layouts and simple websites.
+      Then started participating in some projects with a more complex structure and learning some frameworks.
+      So here you can see some projects I developed using tech like: Javascript, Bootstrap, HTML, CSS, Angular 2+, Node,
+      Express, and more...
+    </p>
+  </article>
+
+  <article id="projects">
+    <h2>Projects</h2>
+
+    <p>Soon...</p>
+  </article>
+
+  <footer data-aos="fade-up">
+    <a href="https://linkedin.com/in/gcanderoli"><img src="imgs/linkedin.png"
+        alt="Gabriel Canderoli linkedin profile"></a>
+    <a href="https://github.com/gcanderoli/"><img src="imgs/github.png" alt="Gabriel Canderoli github profile"></a>
+    <a href="http://bit.ly/messagetogabriel"><img src="imgs/whatsapp.png" alt="Send a message on whatsapp"></a>
+    <a href="mailto:gcanderoli@live.com.ar"><img src="imgs/envelope.png" alt="mail to Gabriel Canderoli"></a>
+    <p><small>Gabriel Canderoli 2019</small></p>
+  </footer>
+
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script> -->
+  <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script> -->
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+  <script src="/js/custom.js"></script>
+
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
